@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+1/4/25: The entry to SkipUtapiServices can now include ranges (In 4.2).
+
 12/28/25: SEM_4-2-14
 12/28/25: Fixed use of argument 1 and 2 to EndAcquireAtItems to suppress
 message and allow a script to run, and also made value of 2 allow multigrid to
